--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ jinja2==2.11.*
 MarkupSafe==2.0.*
 invoke==1.6.*
 ruamel.yaml==0.17.*
-ansible==2.9.*
+ansible==2.9.18
 pygelf==0.4.*
 toml==0.10.*
 python-dateutil==2.8.*
